--- a/src/components/CustomTable.scss
+++ b/src/components/CustomTable.scss
@@ -30,13 +30,9 @@
           th{
             padding: 16px 12px;
             text-align: center;
-            color: var(--primary-200, #A9D400);
-            font-family:  Pretendard400;
+            color:#A9D400;
+            font-family: Pretendard400;
             font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            white-space: nowrap;
             white-space:nowrap;
           font {
             font-family:  inherit !important;
@@ -64,12 +60,10 @@
         tr {
           td{
             padding: 10px 12px;
-            color: var(--Text-music-sub, #AAA);
+            color:#AAA;
             text-align: center;
             font-family: Pretendard400;
             font-size: 14px;
-            font-style: normal;
-            line-height: normal;
             border-bottom: 1px solid #333;
             white-space: nowrap;
           font {
