--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -24,7 +24,7 @@
   border-radius: 18px;
   border: 1px solid #222;
   H2 {
-    color: var(--primary-base, #cf0);
+    color: #cf0;
     font-family:  Pretendard400;
     font-size: 18px;
     letter-spacing: 0.54px;
