--- a/src/components/mypage/aiservices/AiServices.scss
+++ b/src/components/mypage/aiservices/AiServices.scss
@@ -7,14 +7,14 @@
   overflow: auto;
   padding: 0 0 16px 0;
   .ai__service-btn {
-    color: var(--Text-music-title, #f1f1f1);
+    color: #f1f1f1;
     font-family: Pretendard600;
     font-size: 16px;
     font-style: normal;
     line-height: normal;
     letter-spacing: 0.48px;
     border-radius: 12px;
-    background: var(--Color-04, #383838);
+    background: #383838;
     height: 52px;
     padding: 8px 10px;
     white-space: nowrap;
@@ -65,8 +65,8 @@
   }
 
   .active {
-    color: var(--Text-dark-title, #1a1a1a);
-    background: var(--primary-100, #cf0);
+    color: #1a1a1a;
+    background: #cf0;
     &:after {
       border-color: #cf0;
     }
@@ -84,7 +84,7 @@
   .ai-status__title {
     margin-bottom: 24px;
     color:#cf0;
-    font-family:  Pretendard400;
+    font-family: Pretendard400;
     font-size: 24px;
     font-style: normal;
     line-height: normal;
@@ -116,14 +116,14 @@
     align-items: flex-start;
     gap: 12px;
     border-radius: 12px;
-    border: 1px solid var(--Color-03, #222);
+    border: 1px solid #222;
     margin-bottom: 24px;
     .ai-status__menu-item {
       display: flex;
       align-items: center;
       justify-content: center;
       align-items: center;
-      color: var(--Text-music-un, #565656);
+      color: #565656;
       font-family: Pretendard500;
       font-size: 14px;
       font-style: normal;
@@ -143,7 +143,7 @@
       padding: 8px 12px;
       gap: 8px;
       border-radius: 12px;
-      background: var(--secondary-base, #00ffb3);
+      background: #00ffb3;
     }
   }
   .ai-status__info {
@@ -166,7 +166,7 @@
     width: 50%;
     .ai-status__detail-title {
       color:#cf0;
-      font-family:  Pretendard400;
+      font-family: Pretendard400;
       font-size: 18px;
       font-style: normal;
       line-height: normal;
@@ -187,7 +187,7 @@
         margin-bottom: 12px;
         .detail-item__title {
           box-sizing: border-box;
-          color: var(--Text-music-title, #f1f1f1);
+          color: #f1f1f1;
           width: 100%;
           max-width: 140px;
           font-family: Pretendard500;
@@ -198,11 +198,11 @@
           align-items: center;
           align-self: stretch;
           border-radius: 6px 0px 0px 6px;
-          border-top: 1px solid var(--Color-03, #222);
-          border-bottom: 1px solid var(--Color-03, #222);
-          border-left: 1px solid var(--Color-03, #222);
+          border-top: 1px solid #222;
+          border-bottom: 1px solid #222;
+          border-left: 1px solid #222;
           border-right: 12px solid #1a1a1a;
-          background: var(--Color-03, #222);
+          background: #222;
           font{
             font-family: inherit !important;
             font-size: inherit !important;
@@ -219,11 +219,11 @@
           padding: 8px 12px;
           align-items: center;
           border-radius: 0px 6px 6px 0px;
-          border-top: 1px solid var(--Color-03, #222);
-          border-right: 1px solid var(--Color-03, #222);
-          border-bottom: 1px solid var(--Color-03, #222);
+          border-top: 1px solid #222;
+          border-right: 1px solid #222;
+          border-bottom: 1px solid #222;
           border-left: 1px solid #222;
-          color: var(--Text-music-sub, #aaa);
+          color: #aaa;
           font-family: Pretendard400;
           font-size: 14px;
           font{
@@ -243,7 +243,7 @@
 .ai__period {
   margin-bottom: 20px;
   .period__title {
-    color: var(--primary-base, #cf0);
+    color: #cf0;
     font-family: Pretendard400;
     font-size: 24px;
     font-style: normal;
@@ -252,15 +252,15 @@
     margin-bottom: 24px;
     position: relative;
     margin-top: 16px;
-      font{
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
+    font{
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+    }
     &::after {
       position: absolute;
       content: '';
@@ -281,8 +281,8 @@
       justify-content: center;
       align-items: center;
       border-radius: 10px 2px 10px 10px;
-      border: 1px solid var(--primary-200, #a9d400);
-      color: var(--primary-base, #cf0);
+      border: 1px solid #a9d400;
+      color: #cf0;
       font-family: Pretendard400;
       font-size: 14px;
       font-style: normal;
