--- a/src/components/mypage/songs/TopSongsTemplate.scss
+++ b/src/components/mypage/songs/TopSongsTemplate.scss
@@ -27,12 +27,9 @@
     }
   }
   &__item--title {
-    color: var(--primary-base, #cf0);
-    font-family:  Pretendard400;
+    color:#cf0;
+    font-family: Pretendard400;
     font-size: 18px;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.54px;
     margin-bottom: 16px;
   }
 
