--- a/src/components/nft/MintNftDetail.scss
+++ b/src/components/nft/MintNftDetail.scss
@@ -1686,7 +1686,7 @@
             display: flex;
             align-items: center;
             gap: 4px;
-            color: var(--Text-music-sub, #aaa);
+            color:#aaa;
             font-family: Pretendard400;
             font-size: 12px;
             font-style: normal;
@@ -1718,7 +1718,7 @@
             align-items: center;
             justify-content: center;
             gap: 8px;
-            color: var(--Text-music-title, #f1f1f1);
+            color: #f1f1f1;
             font-family: Pretendard400;
             font-size: 12px;
             font-style: normal;
@@ -1746,7 +1746,7 @@
             position: relative;
             top: 0;
             transition: 0.2s;
-            color: var(--Text-dark-title, #1a1a1a);
+            color:#1a1a1a;
             font-family: Pretendard600;
             font-size: 12px;
             font-style: normal;
