--- a/src/components/unit/Filter.scss
+++ b/src/components/unit/Filter.scss
@@ -103,7 +103,7 @@
 
       &.reset {
         width: 100px;
-        border: 1px solid var(--Color-04, #383838);
+        border: 1px solid #383838;
         &::after {
           border-color: #383838;
         }
