--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -32,27 +32,18 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         font-weight: 600;
         color: $text-color;
         text-align: left;
-        color: var(--primary-base, #cf0);
+        color: #cf0;
         font-family: Pretendard400;
         font-size: 18px;
-              font{
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
-      }
-            font{
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
+        font{
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
+        }
       }
     }
 
@@ -66,7 +57,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       gap: 10px;
       overflow-y: auto;
       max-height: 500px;
-                  font{
+      font{
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -82,15 +73,15 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         font-size: 14px;
         word-wrap: break-word;
         transition: background-color 0.3s ease;
-            font{
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
+        font{
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
+        }
         &.user {
           align-self: flex-end;
           // background-color: $primary;
@@ -175,15 +166,15 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       border-radius: 12px;
       border: 1px solid #cf0;
       background: #0b0b0c;
-                          font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
-              }
+      font{
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
+      }
       input {
         flex: 1;
         // padding: 10px 12px;
@@ -228,20 +219,20 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     }
 
     &__button {
-                                font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
-              }
+      font{
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
+      }
       width: 100px;
       height: 30px;
       background: #cf0;
       transition: 0.2s;
-      color: var(--Text-dark-title, #1a1a1a);
+      color: #1a1a1a;
       font-family: Pretendard600;
       font-size: 12px;
       font-style: normal;
@@ -309,7 +300,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       margin-bottom: 16px;
       position: relative;
       h2 {
-        color: var(--primary-base, #cf0);
+        color:#cf0;
         font-family: Pretendard400;
         font-size: 18px;
         font-style: normal;
@@ -352,7 +343,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       }
       .music__information__lyric--text {
         border-radius: 12px;
-        background: var(--Color-02, #1a1a1a);
+        background:#1a1a1a;
         padding: 12px 8px;
         textarea {
           height: 300px;
@@ -361,7 +352,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       }
       textarea {
         border-radius: 12px;
-        background: var(--Color-02, #1a1a1a);
+        background:#1a1a1a;
         height: 300px;
       }
       input,
@@ -385,15 +376,15 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       flex-direction: column;
       align-items: center;
       margin-top: 12px;
-                          font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
-              }
+        font{
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
+        }
       button {
         width: 100%;
         height: 40px;
@@ -401,7 +392,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         position: relative;
         top: 0;
         transition: 0.2s;
-        color: var(--Text-dark-title, #1a1a1a);
+        color: #1a1a1a;
         font-family: Pretendard600;
         font-size: 12px;
         font-style: normal;
@@ -410,15 +401,15 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         display: flex;
         align-items: center;
         justify-content: center;
-                          font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
-              }
+        font{
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
+        }
         &::before {
           content: '';
           position: absolute;
@@ -472,21 +463,19 @@ $shadow-color: rgba(0, 0, 0, 0.3);
 .music__information__tags,
 .music__information__story {
   h3 {
-    color: var(--Text-music-title, #f1f1f1);
+    color:#f1f1f1;
     font-family: Pretendard600;
     // font-size: 18px;
-    font-style: normal;
-    line-height: normal;
     margin-bottom: 8px;
-                          font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
-              }
+    font{
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+    }
   }
   textarea {
     max-height: 100px;
@@ -494,7 +483,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
   }
   input,
   textarea {
-    color: var(--Text-music-title, #f1f1f1);
+    color:#f1f1f1;
     font-family: Pretendard500;
     font-size: 14px;
     font-style: normal;
@@ -503,14 +492,14 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     background: transparent;
     padding: 0;
     margin-bottom: 32px;
-                          font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
-              }
+    font{
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+    }
   }
 }
