--- a/src/components/EditAlbumModal.scss
+++ b/src/components/EditAlbumModal.scss
@@ -22,7 +22,7 @@
             letter-spacing: inherit !important;
           }
     span{
-      color: var(--primary-base, #CF0);
+      color:#CF0;
       font-family: Pretendard400;
       font-size: 16px;
       font-style: normal;
@@ -50,7 +50,7 @@
       top: 0;
       transition: 0.2s;
       color: #fff;
-      font-family:  Pretendard600;
+      font-family: Pretendard600;
       font-size: 12px;
       font-style: normal;
       line-height: normal;
@@ -86,7 +86,7 @@
       }
       &:nth-child(2){
         background: #CF0;
-        color: var(--Text-dark-title, #1A1A1A);
+        color:#1A1A1A;
         font-family:  Pretendard600;
         font-size: 16px;
           font {
