--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -24,7 +24,7 @@
       // flex: 1;
       width: 300px;
       border-radius: 16px 4px 16px 16px;
-      background: var(--Color-03, #222);
+      background:#222;
       padding: 16px;
       display: flex;
       flex-direction: column;
@@ -96,9 +96,9 @@
             align-items: center;
             padding: 0 16px;
             border-radius: 6px;
-            border: 1px solid var(--Color-04, #383838);
-            background: var(--Dark-Color-01, #0b0b0c);
-            color: var(--Text-music-title, #f1f1f1);
+            border: 1px solid #383838;
+            background: #0b0b0c;
+            color: #f1f1f1;
             font-family: Pretendard400;
             font-size: 14px;
             font-style: normal;
@@ -161,7 +161,7 @@
           gap: 8px;
           min-height: 140px;
           dt {
-            color: var(--primary-300, #87aa00);
+            color: #87aa00;
             font-family: Pretendard500;
             font-size: 14px;
             font-style: normal;
@@ -180,7 +180,7 @@
           }
           dd {
             a {
-              color: var(--Text-music-sub, #aaa);
+              color: #aaa;
               font-family: Pretendard400;
               font-size: 12px;
               font-style: normal;
@@ -195,7 +195,7 @@
                 letter-spacing: inherit !important;
               }
             }
-            color: var(--Text-music-sub, #aaa);
+            color: #aaa;
             font-family: Pretendard400;
             font-size: 12px;
             font-style: normal;
@@ -248,8 +248,8 @@
           }
           dl {
             dt {
-              color: var(--Text-music-title, #f1f1f1);
-              font-family:  Pretendard600;
+              color: #f1f1f1;
+              font-family:Pretendard600;
               font-size: 18px;
               font-style: normal;
               font-weight: 600;
@@ -265,7 +265,7 @@
               }
             }
             dd {
-              color: var(--Text-music-sub, #aaa);
+              color:#aaa;
               font-family: Pretendard400;
               font-size: 12px;
               font-style: normal;
@@ -284,9 +284,9 @@
         } //footer__bottom__left__music-token__txt--END--
         .footer__bottom__left__music-token__number {
           dt {
-            color: var(--Text-music-title, #f1f1f1);
+            color: #f1f1f1;
             text-align: right;
-            font-family:  Pretendard600;
+            font-family: Pretendard600;
             font-size: 18px;
             font-style: normal;
             line-height: normal;
@@ -325,7 +325,7 @@
         justify-content: space-between;
         gap: 16px;
         dt {
-          color: var(--Text-music-sub, #aaa);
+          color:#aaa;
           font-family: Pretendard400;
           font-size: 14px;
           font-style: normal;
@@ -341,7 +341,7 @@
               }
         }
         dd {
-          color: var(--Text-music-sub, #aaa);
+          color:#aaa;
           font-family:  Pretendard400;
           font-size: 14px;
           font-style: normal;
@@ -396,7 +396,7 @@
                   dt {
                     p,
                     span {
-                      color: var(--Text-music-title, #f1f1f1);
+                      color: #f1f1f1;
                       font-family:  Pretendard600;
                       font-size: 18px;
                       font-style: normal;
@@ -436,7 +436,7 @@
               }
               dl {
                 dt {
-                  color: var(--Text-music-sub, #aaa);
+                  color:#aaa;
                   font-family: Pretendard400;
                   font-size: 14px;
                   font-style: normal;
@@ -454,7 +454,7 @@
                   }
                   p,
                   span {
-                    color: var(--Text-music-sub, #aaa);
+                    color:#aaa;
                     font-family: Pretendard400;
                     font-size: 14px;
                     font-style: normal;
@@ -471,7 +471,7 @@
                   }
                 }
                 dd {
-                  color: var(--Text-music-sub, #aaa);
+                  color:#aaa;
                   font-family: Pretendard400;
                   font-size: 14px;
                   font-style: normal;
