--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -4,7 +4,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  background: var(--Color-01, #0b0b0cb5);
+  background:#0b0b0cb5;
   z-index: 1000;
   display: flex;
   align-items: center;
@@ -15,8 +15,8 @@
     width: 100%;
     background-color: #222;
     border-radius: 16px;
-    border: 1px solid var(--Color-05, #222);
-    background: var(--Color-02, #1a1a1a);
+    border: 1px solid #222;
+    background: #1a1a1a;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
     .modal-header {
       padding: 17px;
@@ -26,7 +26,7 @@
     .modal-title {
       color: #f1f1f1;
       font-size: 20px;
-      font-family:  Pretendard600;
+      font-family: Pretendard600;
             font{
                 font-family: inherit !important;
                 font-size: inherit !important;
@@ -74,17 +74,15 @@
   color:#888;
   text-align: center;
   font-size: 12px;
-  font-style: normal;
-  line-height: 21px; /* 161.538% */
-            font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
-            }
+  font{
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+  }
 }
 .host-tournament__btns {
   display: flex;
@@ -94,16 +92,15 @@
   .btn {
     flex: 1;
     border-radius: 4px;
-    border: 1px solid var(--Color-04, #383838);
+    border: 1px solid #383838;
     height: 42px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--Dark-Color-08, var(--Color-08, #d9d9d9));
+    color: #d9d9d9;
     text-align: center;
     font-family: Pretendard700;
     font-size: 14px;
-    font-style: normal;
       font{
           font-family: inherit !important;
           font-size: inherit !important;
@@ -114,7 +111,7 @@
           letter-spacing: inherit !important;
       }
     &.start-btn {
-      background: var(--Purple-01, #ccb3ff);
+      background: #ccb3ff;
       border: 1px solid #ccb3ff;
       color: #1a1a1a;
       transition: 0.3s;
@@ -173,7 +170,7 @@
     width: 100%;
     margin: 16px 0;
     border-radius: 4px;
-    background: var(--Color-04, #383838);
+    background: #383838;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -189,16 +186,14 @@
         color: #d9d9d9;
         font-family: Pretendard600;
         font-size: 12px;
-        font-style: normal;
-        line-height: normal;
         font{
-            font-family: inherit !important;
-            font-size: inherit !important;
-            font-weight: inherit !important;
-            line-height: inherit !important;
-            font-style: inherit !important;
-            color: inherit !important;
-            letter-spacing: inherit !important;
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
         }
       }
       dd {
@@ -208,13 +203,13 @@
         font-style: normal;
         line-height: normal;
         font{
-            font-family: inherit !important;
-            font-size: inherit !important;
-            font-weight: inherit !important;
-            line-height: inherit !important;
-            font-style: inherit !important;
-            color: inherit !important;
-            letter-spacing: inherit !important;
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
         }
       }
     }
@@ -229,20 +224,18 @@
         text-align: left;
         tr {
           th {
-            color: var(--Dark-Color-06, var(--Color-06, #888));
+            color: #888;
             text-align: center;
             font-family: Pretendard600;
             font-size: 12px;
-            font-style: normal;
-            line-height: normal;
             font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
+              font-family: inherit !important;
+              font-size: inherit !important;
+              font-weight: inherit !important;
+              line-height: inherit !important;
+              font-style: inherit !important;
+              color: inherit !important;
+              letter-spacing: inherit !important;
             }
             // padding: 0 16px;
             //   &:nth-child(1){
@@ -266,7 +259,7 @@
       tbody {
         tr {
           border-radius: 4px;
-          background: var(--Color-03, #222);
+          background:#222;
           margin: 5px 0;
           display: table-row;
 
@@ -274,19 +267,17 @@
             padding: 8px;
             vertical-align: middle;
             text-align: center;
-            color: var(--Dark-Color-10, var(--Color-10, #fff));
+            color: #fff;
             font-family: Pretendard600;
             font-size: 10px;
-            font-style: normal;
-            line-height: normal;
             font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
+              font-family: inherit !important;
+              font-size: inherit !important;
+              font-weight: inherit !important;
+              line-height: inherit !important;
+              font-style: inherit !important;
+              color: inherit !important;
+              letter-spacing: inherit !important;
             }
             .rank-number {
               font-size: 12px;
@@ -300,18 +291,16 @@
               border-radius: 50px;
               font-weight: bold;
               border-radius: 20px;
-              border: 1px solid var(--Color-04, #383838);
-              background: var(--Color-03, #222);
+              border: 1px solid #383838;
+              background: #222;
               height: 20px;
               display: flex;
               align-items: center;
               justify-content: center;
               gap: 8px;
-              color: var(--Dark-Color-10, var(--Color-10, #fff));
+              color: #fff;
               font-family: Pretendard600;
               font-size: 10px;
-              font-style: normal;
-              line-height: normal;
               font{
                   font-family: inherit !important;
                   font-size: inherit !important;
@@ -391,17 +380,15 @@
         color: #a3a3a3;
         font-family: Pretendard600;
         font-size: 14px;
-        font-style: normal;
-        line-height: 100%; /* 14px */
         transition: 0.3s;
         font{
-            font-family: inherit !important;
-            font-size: inherit !important;
-            font-weight: inherit !important;
-            line-height: inherit !important;
-            font-style: inherit !important;
-            color: inherit !important;
-            letter-spacing: inherit !important;
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
         }
         &:hover {
           background: #ccb3ff;
@@ -471,7 +458,7 @@
   margin-bottom: 32px;
   dt {
     color: #d9d9d9;
-    font-family: Pretendard700;
+    font-family:Pretendard700;
     font-size: 14px;
     font-style: normal;
     line-height: normal;
@@ -499,18 +486,16 @@
       bottom: -20px;
       left: 0;
       color: #ff5c63;
-      font-family: Pretendard600;
+      font-family:Pretendard600;
       font-size: 12px;
-      font-style: normal;
-      line-height: normal;
       font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
       }
     }
   }
@@ -527,15 +512,15 @@
   color: #1a1a1a;
   font-family: Pretendard700;
   font-size: 14px;
-      font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-      }
+  font{
+    font-family: inherit !important;
+    font-size: inherit !important;
+    font-weight: inherit !important;
+    line-height: inherit !important;
+    font-style: inherit !important;
+    color: inherit !important;
+    letter-spacing: inherit !important;
+  }
   &:hover {
     box-shadow: 0px 0px 10px 0px #ccb3ff;
   }
@@ -547,22 +532,20 @@
   .modal-content-box {
     .modal-header {
       h2 {
-        color: var(--Dark-Color-10, var(--Color-10, #fff));
+        color: #fff;
         text-align: center;
         font-family: Pretendard700;
         font-size: 20px;
-        font-style: normal;
-        line-height: normal;
         text-transform: capitalize;
-      font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-      }
+        font{
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            color: inherit !important;
+            letter-spacing: inherit !important;
+        }
       }
       border: none;
     }
@@ -576,7 +559,7 @@
         justify-content: center;
         flex-shrink: 0;
         align-self: stretch;
-        color: var(--Dark-Color-06, var(--Color-06, #888));
+        color: #888;
         text-align: center;
         font-family: Pretendard400;
         font-size: 13px;
@@ -594,19 +577,17 @@
       .entrants-btn {
         width: 100%;
         border-radius: 4px;
-        background: var(--Purple-01, #ccb3ff);
+        background:#ccb3ff;
         display: flex;
         padding: 12px 20px;
         justify-content: center;
         align-items: center;
         gap: 10px;
         align-self: stretch;
-        color: var(--Dark-Color-02, var(--Color-02, #1a1a1a));
+        color:#1a1a1a;
         text-align: center;
         font-family: Pretendard700;
         font-size: 16px;
-        font-style: normal;
-        line-height: 24px; /* 150% */
         font{
           font-family: inherit !important;
           font-size: inherit !important;
