--- a/src/components/PlayerHeader.scss
+++ b/src/components/PlayerHeader.scss
@@ -58,10 +58,8 @@
         overflow: hidden;
         color: #f1f1f1 !important;
         text-overflow: ellipsis;
-        font-family: Pretendard700;
+        font-family:Pretendard700;
         font-size: 14px;
-        font-style: normal;
-        line-height: 100%; /* 14px */
       }
       .rhap_current-time::after {
         content: '|';
@@ -78,8 +76,6 @@
         text-overflow: ellipsis;
         font-family: Pretendard400;
         font-size: 14px;
-        font-style: normal;
-        line-height: 100%; /* 14px */
       }
     }
     .rhap_controls-section {
@@ -240,8 +236,6 @@
         color:#aaa;
         font-family: Pretendard400;
         font-size: 12px;
-        font-style: normal;
-        line-height: 100%; /* 12px */
         &.name {
           img {
             width: 16px;
@@ -259,7 +253,7 @@
       position: relative;
       top: 0;
       transition: 0.2s;
-      color: var(--Text-dark-title, #1a1a1a);
+      color: #1a1a1a;
       font-family:  Pretendard600;
       font-size: 12px;
       font-style: normal;
