--- a/src/components/create/DescriptionBanner.scss
+++ b/src/components/create/DescriptionBanner.scss
@@ -9,47 +9,46 @@
     flex-direction: column;
     gap: 16px;
     .desc-banner__title {
-        color: var(--Text-music-title, #f1f1f1);
+        color:#f1f1f1;
         font-family:  Pretendard400;
         font-size: 18px;
-              font{
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
+        font{
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            color: inherit !important;
+            letter-spacing: inherit !important;
+        }
     }
     .desc-banner__strong {
         color: #cf0;
         font-family:  Pretendard400;
         font-size: 36px;
-        
-              font{
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
+        font{
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            color: inherit !important;
+            letter-spacing: inherit !important;
+        }
     }
     .desc-banner__notice {
         color: #aaa;
         font-family: Pretendard400;
         font-size: 16px;
         font    {
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-    }
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            color: inherit !important;
+            letter-spacing: inherit !important;
+        }
     }
     .desc-banner__tip-box {
         display: flex;
@@ -60,30 +59,29 @@
         gap: 8px;
         border-radius: 4px;
         background: #121a00;
-            font    {
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-    }
+        font    {
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            color: inherit !important;
+            letter-spacing: inherit !important;
+        }
     }
     .desc-banner__tip-header {
         color:#00ffb3;
         font-family: Pretendard400;
-        line-height: 100%; /* 16px */
         white-space: nowrap;
-                font    {
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-    }
+        font    {
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            color: inherit !important;
+            letter-spacing: inherit !important;
+        }
     }
     .desc-banner__tips {
         color: #007e56;
