--- a/src/components/create/SelectItem.scss
+++ b/src/components/create/SelectItem.scss
@@ -12,10 +12,9 @@
         gap: 16px;
         align-items: center;
         .tag-select-title__text {
-            color: var(--Text-music-title, #cf0);
-            font-family:  Pretendard400;
+            color:#cf0;
+            font-family: Pretendard400;
             font-size: 24px;
-            letter-spacing: 0.72px;
             position: relative;
             margin-bottom: 8px;
             &::after {
@@ -70,7 +69,7 @@
             align-items: center;
         }
         .tag-title__notice {
-            color: var(--Daisy, #ffd700);
+            color:#ffd700;
             font-family: Pretendard400;
             font-size: 12px;
             padding: 4px;
@@ -80,9 +79,8 @@
             width: fit-content;
         }
         .tag-title {
-            font-family:  Pretendard400;
+            font-family: Pretendard400;
             font-size: 18px;
-            letter-spacing: 0.54px;
             color: #f1f1f1;
         }
         .tag-sub-title {
@@ -134,7 +132,7 @@
             width: 120px;
             height: 30px;
             color: #1a1a1a;
-            font-family:  Pretendard600;
+            font-family: Pretendard600;
             font-size: 14px;
             letter-spacing: 0.42px;
             border-radius: 12px;
