--- a/src/components/create/SubBanner.scss
+++ b/src/components/create/SubBanner.scss
@@ -69,16 +69,16 @@
     }
     .sub-banner__buttons {
         border-radius: 12px;
-        color: var(--Text-dark-title, #1a1a1a);
+        color:#1a1a1a;
         font-family:  Pretendard600;
         letter-spacing: 0.48px;
-        background: var(--secondary-base, #00ffb3);
+        background:#00ffb3;
         padding: 8px 10px;
         width: fit-content;
         z-index: 3;
         position: relative;
         transition: 0.2s all;
-                font{
+        font{
             font-family: inherit !important;
             font-size: inherit !important;
             font-weight: inherit !important;
