--- a/src/components/evaluation/EvaluationResultsComp.scss
+++ b/src/components/evaluation/EvaluationResultsComp.scss
@@ -111,14 +111,14 @@
       flex-direction: column;
       gap: 8px;
       dt {
-        color: var(--Text-music-title, #f1f1f1);
+        color:#f1f1f1;
         text-align: center;
         font-family: Pretendard600;
         font-size: 16px;
         padding: 0 16px;
       }
       dd {
-        color: var(--Text-music-sub, #aaa);
+        color:#aaa;
         font-family: Pretendard500;
         font-size: 14px;
       }
@@ -150,7 +150,7 @@
     .result__graph__score__number {
       width: 400px;
       .result__graph__score__number__title {
-        color: var(--Text-music-title, #f1f1f1);
+        color: #f1f1f1;
         font-family: Pretendard600;
         font-size: 22px;
         width: 100%;
@@ -160,7 +160,7 @@
         margin-bottom: 16px;
         gap: 16px;
         span {
-          color: var(--Text-music-title, #f1f1f1);
+          color:#f1f1f1;
           font-family: Pretendard600;
           font-size: 22px;
         }
@@ -202,7 +202,7 @@
             font-size: 16px;
           }
           dd {
-            color: var(--Text-music-sub, #aaa);
+            color:#aaa;
             font-family: Pretendard400;
             font-size: 16px;
           }
@@ -274,7 +274,7 @@
         transition: 0.3s;
       } //ull-evaluation__feed-back__txt__memo--END--
       .full-evaluation__feed-back__txt__see-more {
-        color: var(--Text-music-sub, #aaa);
+        color: #aaa;
         font-family: Pretendard400;
         font-size: 12px;
         display: flex;
@@ -285,7 +285,7 @@
           width: 24px;
           height: 24px;
           border-radius: 2px;
-          border: 1px solid var(--primary-200, #a9d400);
+          border: 1px solid #a9d400;
           position: relative;
           &::after {
             content: '';
@@ -310,7 +310,7 @@
     justify-content: space-between;
     gap: 16px;
     border-radius: 8px;
-    background: var(--Color-02, #1a1a1a);
+    background: #1a1a1a;
     padding: 16px;
     margin-top: 16px;
     dl {
@@ -319,13 +319,13 @@
       gap: 16px;
       flex: 1;
       dt {
-        color: var(--Text-music-sub, #aaa);
+        color: #aaa;
         text-align: center;
         font-family: Pretendard500;
         font-size: 16px;
       }
       dd {
-        color: var(--Text-music-title, #f1f1f1);
+        color: #f1f1f1;
         text-align: center;
         font-family: Pretendard500;
         font-size: 14px !important;
@@ -349,7 +349,7 @@
         width: 100%;
         padding: 8px;
         border-radius: 18px;
-        background: var(--Color-03, #222);
+        background: #222;
         img {
           width: 100%;
           border-radius: 8px;
