--- a/src/components/mypage/albumsAndCollectionsComponents/modals/AlbumCollectionNoticeModal.scss
+++ b/src/components/mypage/albumsAndCollectionsComponents/modals/AlbumCollectionNoticeModal.scss
@@ -15,7 +15,7 @@
     font-family:  Pretendard600;
     font-size: 16px;
     border-radius: 12px;
-    background: var(--primary-base, #cf0);
+    background:#cf0;
     height: 40px;
     position: relative;
     top: 0px;
