--- a/src/components/mypage/songs/AlbumsEdit.scss
+++ b/src/components/mypage/songs/AlbumsEdit.scss
@@ -75,14 +75,14 @@
 
   .albums-edit__category-btn {
     border-radius: 10px 2px 10px 10px;
-    border: 1px solid var(--Color-06, #888);
-    background: var(--Color-03, #222);
+    border: 1px solid #888;
+    background: #222;
     height: 34px;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0 12px;
-    color: var(--Text-music-sub, #aaa);
+    color: #aaa;
     font-family:  Pretendard500;
     font-size: 14px;
     font-style: normal;
