--- a/src/components/unit/FilterAiServiceModal.scss
+++ b/src/components/unit/FilterAiServiceModal.scss
@@ -1,7 +1,7 @@
 .filter-ai-service-modal__content {
   width: 100%;
   h3 {
-    color: var(--Dark-Color-08, var(--Color-08, #d9d9d9));
+    color:#d9d9d9;
     font-family: Pretendard700;
     font-size: 14px;
     font-style: normal;
@@ -22,8 +22,8 @@
       align-items: center;
       gap: 10px;
       border-radius: 20px;
-      border: 1px solid var(--Color-04, #383838);
-      background: var(--Color-03, #222);
+      border: 1px solid #383838;
+      background: #222;
     }
   }
 }
@@ -40,7 +40,7 @@
     height: 48px;
     flex-shrink: 0;
     border-radius: 4px;
-    border: 1px solid var(--Color-04, #383838);
+    border: 1px solid #383838;
     margin-right: 10px;
   }
   .btn-view {
@@ -52,12 +52,10 @@
     gap: 8px;
     border-radius: 4px;
     background: #cf0;
-    color: var(--Dark-Color-02, var(--Color-02, #1a1a1a));
+    color: #1a1a1a;
     text-align: center;
-    font-family: Pretendard;
+    font-family: Pretendard700;
     font-size: 16px;
     font-style: normal;
-    font-weight: 700;
-    line-height: 20px; /* 125% */
   }
 }
