--- a/src/components/unit/Pagination.scss
+++ b/src/components/unit/Pagination.scss
@@ -21,18 +21,18 @@
         border-radius: 8px;
         transition: 0.3s all;
         font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            color: inherit !important;
+            letter-spacing: inherit !important;
         }
         &:hover,
         &.enable {
             color: #1a1a1a;
-            background: var(--primary-100, #cf0);
+            background:#cf0;
         }
 
         &.prev,
