--- a/src/components/unit/PolygonStatus.scss
+++ b/src/components/unit/PolygonStatus.scss
@@ -8,7 +8,7 @@
     text-align: center;
     margin-top: 16px;
     border-radius: 4px;
-    background: var(--Color-03, #222);
+    background:#222;
     padding: 8px 4px;
 
     img {
