--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -7,9 +7,6 @@
     color: #cf0;
     font-family:  Pretendard400;
     font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
     position: relative;
     &::after {
       position: absolute;
@@ -22,8 +19,8 @@
       border-radius: 100%;
     }
     margin-bottom: 32px;
-        font{
-          font-family: inherit !important;
+      font{
+        font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
         line-height: inherit !important;
@@ -62,7 +59,7 @@
         color: #cf0;
       }
       font  {
-          font-family: inherit !important;
+        font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
         line-height: inherit !important;
@@ -128,7 +125,7 @@
     }
     .wrap-title {
       padding: 16px;
-      color: var(--primary-base, #cf0);
+      color: #cf0;
       font-family:  Pretendard400;
       font-size: 18px;
       margin-bottom: 12px;
@@ -213,7 +210,7 @@
           font-family: Pretendard400;
           font-size: 14px;
           border-radius: 12px 4px 12px 12px;
-          background: var(--secondary-100, #00ffb3);
+          background: #00ffb3;
           padding: 4px 12px;
           position: relative;
           cursor: default;
@@ -261,10 +258,9 @@
 
     button {
       position: relative;
-      color: var(--Text-music-title, #f1f1f1);
+      color: #f1f1f1;
       font-family:  Pretendard600;
       font-size: 16px;
-      letter-spacing: 0.48px;
       border-radius: 12px;
       min-width: 140px;
       height: 40px;
@@ -350,7 +346,7 @@
   }
   .check-list__title {
     color: #cf0;
-    font-family:  Pretendard400;
+    font-family: Pretendard400;
     font-size: 18px;
       font {
         font-family:  inherit !important;
@@ -402,29 +398,29 @@
     color: #fff;
     font-family: Pretendard500;
     font-size: 16px;
-          font {
-        font-family:  inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
+    font {
+      font-family:  inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+    }
   }
   .check-list__items--desc {
     color: #aaa;
     font-family: Pretendard400;
     font-size: 14px;
-          font {
-        font-family:  inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
+    font {
+      font-family:  inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+    }
   }
 
   .mb16 {
@@ -436,7 +432,7 @@
 }
 .lyrics-lab__selected-item {
   .lyrics-lab__selected-item--title {
-    color: var(--Text-music-title, #f1f1f1);
+    color:#f1f1f1;
     font-family:  Pretendard600;
     font-size: 18px;
     margin-bottom: 8px;
@@ -451,7 +447,7 @@
       }
   }
   .lyrics-lab__selected-item--text {
-    color: var(--Text-music-sub, #aaa);
+    color: #aaa;
     font-family: Pretendard500;
     font-size: 14px;
       font {
