--- a/src/styles/Get.scss
+++ b/src/styles/Get.scss
@@ -35,7 +35,7 @@
             position: relative;
             z-index: 1;
             dt{
-                color: var(--Dark-Color-10, var(--Color-10, #FFF));
+                color: #FFF;
                 font-family: Pretendard700;
                 font-size: 28px;
                 margin-bottom: 14px;
@@ -55,7 +55,7 @@
                 }
             }
             dd{
-                color: var(--Dark-Color-10, var(--Color-10, #FFF));
+                color: #FFF;
                 font-family: Pretendard400;
                 font-size: 16px;
                 font{
@@ -87,7 +87,7 @@
                     display: none !important;
                 }
                 .get__content__item__none-title{
-                    color: var(--Dark-Color-06, var(--Color-06, #888));
+                    color:#888;
                     text-align: center;
                     font-family: Pretendard500;
                     font-size: 12px;
@@ -187,7 +187,7 @@
                     }
                 }
                 dd{
-                    color: var(--Dark-Color-08, var(--Color-08, #D9D9D9));
+                    color:#D9D9D9;
                     text-align: center;
                     font-family: Pretendard500;
                     font-size: 14px;
@@ -230,7 +230,7 @@
                         }
                     }
                     span{
-                        color: var(--Daisy, #FFD700);
+                        color:#FFD700;
                         text-align: center;
                         font-family: Pretendard500;
                         font-size: 14px;
@@ -253,7 +253,7 @@
             }//get__content__item__mob--END--
             .get__content__item__minutes{
                 dt{
-                    color: var(--secondary-base, #00FFB3);
+                    color:#00FFB3;
                     text-align: center;
                     font-family: Pretendard400;
                     font-size: 9px;
